type5 надо:: 1. додумать кейклоак 2. система пермишеннов 3. "счетчик" просмотров 4. компоновка докер 5. написа тесты 6. "документация"+ постманьт
