# order_service/src/main/java/org/copyria2/order_service/entity/ChangeEntity.java
@@ -1,0 +1,25 @@
+package org.copyria2.order_service.entity;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Entity
+@Table(name = "changes")
+public class ChangeEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+    private String currency;
+    private String base_currency;
+    private BigDecimal buy;
+    private BigDecimal sale;
+}
